--- a/grp3.html
+++ b/grp3.html
@@ -168,9 +168,9 @@
 
 <p>A entendre les rappeurs, Obama est devenu pour eux un membre de l’establishment, porte-parole d’une superpuissance capitaliste. <i>« Je suis plus proche de Guy Môquet que d’Obama »</i>, rappait ainsi Maître Gims en 2018, évoquant un jeune résistant communiste tué pendant la Seconde Guerre mondiale. Dans leur morceau « La Promesse », trois rappeurs — Youssoupha, Soprano et Disiz — chantent ensemble en 2015 : <i>« Oh Mama, j’tiendrai mes promesses plus qu’Obama. »</i></p>
 
-<p>Dans un article du Monde publié en 2012, Brother Ali, rappeur américain indépendant, donne une explication de cette perte de popularité d’Obama : “Barack Obama est la personnalité publique la plus douée que notre génération a connue, éludait-t-il. Nous l’avons porté à la plus haute place de responsabilités aux Etats-Unis, et il n’a pas été capable de mener à bien les réformes que nous voulions voir accomplies. Cela montre deux choses : soit le système est tellement corrompu que même le meilleur des politiques n’y peut rien, soit Obama a perdu le courage et la force de se battre. En tout cas, il a été incapable de faire bouger les choses.”</p>
+<p>Dans un article du Monde publié en 2012, Brother Ali, rappeur américain indépendant, donne une explication de cette perte de popularité d’Obama : <i>« Barack Obama est la personnalité publique la plus douée que notre génération a connue, éludait-t-il. Nous l’avons porté à la plus haute place de responsabilités aux Etats-Unis, et il n’a pas été capable de mener à bien les réformes que nous voulions voir accomplies. Cela montre deux choses : soit le système est tellement corrompu que même le meilleur des politiques n’y peut rien, soit Obama a perdu le courage et la force de se battre. En tout cas, il a été incapable de faire bouger les choses. »</i></p>
 
-<p>Le conflit israélo-palestinien</p>
+<h2><p>Le conflit israélo-palestinien</p></h2>
 
 
 <p>Le conflit israélo-palestinien est un sujet sensible, brûlant même, qui occupe le débat public français, depuis le début des années 1950. Le rap, qui entend s’inscrire dans la société et plus largement au coeur du social, s’en est logiquement emparé.</p>
