--- a/grp3.html
+++ b/grp3.html
@@ -175,17 +175,17 @@
 
 <p>Le conflit israélo-palestinien est un sujet sensible, brûlant même, qui occupe le débat public français, depuis le début des années 1950. Le rap, qui entend s’inscrire dans la société et plus largement au coeur du social, s’en est logiquement emparé.</p>
 
-<p>Sniper a ouvert la voie dès 2003, avec son single « Jeteur de Pierres » (Gravé dans la roche) qui peut s’entendre comme un soutien explicite à la Palestine et une critique de la violation du droit international dans le camp adverse : « Pour tous les frères, les jeunes de mon âge qui ont grandi / Dans cette atmosphère et qui ont vu ça toute leur vie / Les mains nues, face à une armée prête à rer-ti », « Quoi qu'il arrive c'est toujours des civils qui morflent ». Les mots sont violents. Le ministre de l’Intérieur de l’époque, Nicolas Sarkozy, menacera d’ailleurs l’artiste d’un dépôt de plainte, pour antisémitisme.</p>
+<p>Sniper a ouvert la voie dès 2003, avec son single « Jeteur de Pierres » (Gravé dans la roche) qui peut s’entendre comme un soutien explicite à la Palestine et une critique de la violation du droit international dans le camp adverse : <i>« Pour tous les frères, les jeunes de mon âge qui ont grandi / Dans cette atmosphère et qui ont vu ça toute leur vie / Les mains nues, face à une armée prête à rer-ti »</i>, <i>« Quoi qu'il arrive c'est toujours des civils qui morflent »</i>. Les mots sont violents. Le ministre de l’Intérieur de l’époque, Nicolas Sarkozy, menacera d’ailleurs l’artiste d’un dépôt de plainte, pour antisémitisme.</p>
 
-<p>Sans entrer dans la polémique et sans multiplier les exemples, ce qui frappe ici, c’est le vocabulaire et le champ lexical utilisés. Le registre émotionnel, le motif de la souffrance, peuvent en effet s’entendre à chaque refrain, à chaque complet. Les Israéliens ? Ce sont de “misérables gens”. La communauté internationale est quant à elle taxée de “laxiste”. “Et c'est triste, toujours la même morale / Les mêmes balles, le même mal, la même spirale”. “Laxiste, le monde laisse faire et s'défile / Pendant qu'tu tues des civils et les appelles terroristes”</p>
+<p>Sans entrer dans la polémique et sans multiplier les exemples, ce qui frappe ici, c’est le vocabulaire et le champ lexical utilisés. Le registre émotionnel, le motif de la souffrance, peuvent en effet s’entendre à chaque refrain, à chaque complet. Les Israéliens ? Ce sont de <i>« misérables gens »</i>. La communauté internationale est quant à elle taxée de <i>« laxiste »</i>. <i>« Et c'est triste, toujours la même morale / Les mêmes balles, le même mal, la même spirale »</i>. <i>« Laxiste, le monde laisse faire et s'défile / Pendant qu'tu tues des civils et les appelles terroristes »</i>.</p>
 
 
-<p>Ces saillies en disent long sur le traitement du conflit israélo-palestinien dans le rap français, lequel se superpose toujours, à la colère, au sentiment d’abandon même, d’une partie de la population française, les banlieues en l’occurrence, après les émeutes de 2005. En témoignent les paroles de « Palestine »  (2009) : le groupe Z.E.P. (Zone d’expression populaire) se range clairement  « du côté de l’opprimé, du côté du tiers monde et des peuples martyrisés ». La violence du gouvernement israélien avait déjà été épinglée par I.A.M. en 1993. Dans « J’aurais pu croire », morceau génial tiré de l’album « L’Ombre est lumière), le groupe faisait référence aux pratiques de cet Etat, au détour d’un couplet :</p>
+<p>Ces saillies en disent long sur le traitement du conflit israélo-palestinien dans le rap français, lequel se superpose toujours, à la colère, au sentiment d’abandon même, d’une partie de la population française, les banlieues en l’occurrence, après les émeutes de 2005. En témoignent les paroles de « Palestine »  (2009) : le groupe Z.E.P. (Zone d’expression populaire) se range clairement <i>« du côté de l’opprimé, du côté du tiers monde et des peuples martyrisés »</i>. La violence du gouvernement israélien avait déjà été épinglée par I.A.M. en 1993. Dans « J’aurais pu croire », morceau génial tiré de l’album « L’Ombre est lumière », le groupe faisait référence aux pratiques de cet Etat, au détour d’un couplet :</p>
 
-<p>« J'aurais pu croire en Israël mais
-Les différentes religions n'y vivent pas en paix
-Les deux tiers du territoire que les sionistes ont occupés
-Par l'ONU en 48 n'ont jamais été attribués ».</p>
+<p><i>« J'aurais pu croire en Israël mais /
+Les différentes religions n'y vivent pas en paix /
+Les deux tiers du territoire que les sionistes ont occupés /
+Par l'ONU en 48 n'ont jamais été attribués »</i></p>
 
 <p>Comment interpréter ces prises de position parfois précoces, souvent très explicites ? 
 Pour Kohndo,  « les rappeurs et les quartiers sont tellement liés qu’ils partagent sans doute cette sensation d’enfermement. D’autant qu’il y a une forte communauté de rappeurs de confession musulmane, ce qui ajoute encore davantage de liens avec ce conflit ».</p>
