--- a/grp3.html
+++ b/grp3.html
@@ -200,6 +200,7 @@ Pour Kohndo, <i>« les rappeurs et les quartiers sont tellement liés qu’ils p
      
      <div class="lead col-10 text-muted">
        <p>Textes et enquête data : Anouk Helft, Lina Kortobi, David Pauget, Clara Tran, Aliénor Vinçotte<br>
+       Crédit photo : album Ecoute la rue Marianne (2007)<br>
        Encadrement : Nicolas Enault
      </p>
      </div>
