--- a/grp3.html
+++ b/grp3.html
@@ -175,7 +175,7 @@
 
 <section class="container" id="fallref">
 
-<h4>Le conflit israélo-palestinien</h4>
+<h4>Le conflit israélo-palestinien</h4><br/>
 
 <div class="lead col-10 text-muted">
 
