--- a/grp3.html
+++ b/grp3.html
@@ -80,9 +80,10 @@
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://datawrapper.dwcdn.net/B6JhL/7/" onLoad="autoResize('yourframe');"></iframe> 
         </div>
-           <br/><em><font size="2"><font color= "#6c757d">Méthodologie : nous avons établi une liste des 100 personnalités les plus médiatiques. Pour chacune, nous avons regardé combien de chansons faisaient mention de leurs noms dans les paroles. Dans le cas de la famille Le Pen, comme les prénoms n'étaient pas forcément indiqués, nous n'avons gardé que le nom de famille.</font></font></em> </div>       
-    </div>
+           <br/><em><font size="2"><font color= "#6c757d">Méthodologie : nous avons établi une liste des 100 personnalités les plus médiatiques. Pour chacune, nous avons regardé combien de chansons faisaient mention de leurs noms dans les paroles. Dans le cas de la famille Le Pen, comme les prénoms n'étaient pas forcément indiqués, nous n'avons gardé que le nom de famille.</font></font></em> 
+    </div>       
 
+    <div class="row justify-content-md-center textintro">
        <div class="lead col-10 text-muted">
 
 
@@ -96,13 +97,16 @@
 
           <div class="flourish-embed" data-src="visualisation/166836"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
 
-        <em><font size="2"><font color= "#6c757d">Méthodologie : Une liste de 223 termes liés au champ lexical du politique a été définie. Cette liste a été croisée aux paroles de chansons. Les titres validés sont ceux dont le texte comporte au moins un terme de la liste. Un ratio rapporté au nombre total de chansons produites par année a ensuite été calculé. Pour des raisons de cohérence statistique, les années 1990 et 1996 ont été retirées (nombre de chansons non significatif).</font></font></em> </div>
+        <em><font size="2"><font color= "#6c757d">Méthodologie : Une liste de 223 termes liés au champ lexical du politique a été définie. Cette liste a été croisée aux paroles de chansons. Les titres validés sont ceux dont le texte comporte au moins un terme de la liste. Un ratio rapporté au nombre total de chansons produites par année a ensuite été calculé. Pour des raisons de cohérence statistique, les années 1990 et 1996 ont été retirées (nombre de chansons non significatif).</font></font></em> 
+      </div>
+    </div>
 
 </section>
 <section class="container" id="fallref">
+    <div class="row justify-content-md-center textintro">
        
-        <br/>
-          <h2>Le tournant 2005 : quand les artistes sont passés de l’engagement politique à la moquerie</h2>
+        <br/><br>
+          <h2>Le tournant 2005 : quand les artistes sont passés de l’engagement politique à la moquerie<br><br></h2>
          </br>
 
          <div class="lead col-10 text-muted">
@@ -124,10 +128,7 @@
          <p>Autre matière des rappeurs, selon Brice Bossavie : les déboires des personnalités politiques et les affaires les impliquant, en particulier lorsqu’elles revêtent un aspect financier. <i>« Les affaires Cahuzac et DSK, par exemple, semblent faire rire la majorité des artistes dans le rap »</i> analyse-t-il. Avant de poursuivre : <i>« avec le temps, on assiste même à des retournements étonnants. Les personnalités n’intéressent plus vraiment pour ce qu’elles sont, ce qui amuse désormais les chanteurs c’est si elles ont un culte de l’argent. Il suffit de regarder l’évolution de l’image de Nicolas Sarkozy : alors qu’il était détesté au début des années 2000, il est désormais cité par de nombreux rappeurs comme une référence pour ses qualités de businessman. »</i> 
          </p>
   
-
-         <div class="video-container">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/GgCYHmkWzIs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-         </div>
      <p><i>« Il suffit de regarder les paroles de la chanson Marion Machéral du rappeur Sofiane, sortie en 2017 »</i> détaille Brice Bossavie. <i>« Le titre fait directement référence à la députée et reprend son nom à maintes reprises dans le corps de la chanson. Pourtant, il n’est pas question du projet politique ou des idées de Marion Maréchal Le Pen. Cela semble juste amuser le rappeur de citer son nom et de faire croire qu’il est en couple avec elle. »</i> </p>
 
       <img src="static/img/capture.png" height="900" width="600">
@@ -136,46 +137,52 @@
     <img src="static/img/capture2.png" height="900" width="600"><br/><br/>
      <p>L’amusement des frasques, pour sa part, est notamment visible à travers la chanson « Patrick », signée Grands Corps Malade. Sur ce titre, le rappeur fait un hommage plus que ironique au maire de Levallois-Perret, Patrick Balkany. Parmi les phrases faisant référence aux poursuites judiciaires du maire, on peut notamment relever celle-ci : <i>« T’as sur le dos et sur les bras, plus de mises en examen que ton ami Nicolas. »</i></p><br/>
         </div>
+    </div>
 
 </section>
 
 <section class="container" id="fallref">
 
-      <h2>L’après 2005 et le désintéressement croissant pour la politique nationale au profit de sujets internationaux et post-coloniaux</h2><br/>
+  <div class="row justify-content-md-center textintro">
 
-<h4>Une référence incontournable : Barack Obama</h4><br/>
+    <h2>L’après 2005 et le désintéressement croissant pour la politique nationale au profit de sujets internationaux et post-coloniaux<br><br></h2>
 
-<div class="lead col-10 text-muted">
-<p>Après 2005, on constate un désintéressement croissant des rappeurs français pour la politique nationale au profit de sujets internationaux et post-coloniaux. Les artistes français portent un vif intérêt en la personne de Barack Obama, qui se fait connaître dès 2008 dans sa course vers la Maison-Blanche. Ce dernier devient une référence incontournable dans les chansons des artistes de hip-hop français, qui n’hésitent pas à citer son nom comme élément de comparaison pour évoquer divers sujets comme le racisme, la politique internationale et les sujets liés à l’Afrique.</p>
+    <h4>Une référence incontournable : Barack Obama<br/><br/></h4>
 
-
-<p>En 2009, la chanteuse de hip-hop Diam’s dénonçait ainsi dans son morceau « Dans le noir » le racisme toujours persistant en France, évoquant la personne d’Obama, fraîchement élu : <i>« Vous qui avez besoin de Roselmack et d’Obama / Pour enfin respecter les noirs »</i>. L’artiste Soprano célèbre à sa façon en une ligne l’arrivée de Barack Obama à la Maison-Blanche, dans son morceau « Hiro » sorti en 2010 : <i>« Je serais parti voir Martin Luther King / Après son discours, lui montrer la photo de Barack Obama »</i>. Les mentions sur le président américain pullulent dans les chansons de hip-hop français durant toute la durée de son mandat. Mais s’il est salué de nombreuses fois pour le symbole qu’il a incarné, en France, il est surtout cité comme élément de comparaison avec la vie politique française.</p>
-
-<p>Des artistes dénoncent ainsi le manque de respect envers les personnes noires investies dans la vie politique française, bien qu’il existe un président « noir » aux USA : <i>« Loin des Etats-Unis qui votent massivement pour Obama / Je vis la France où l’on agite une Taubira ou Rama »</i>, et plus loin, <i>« Ici, pas de Malcom, de Martin Luther ou d’Mandela / C’est Arnault, Pinault, Lagardère »</i>, chantait ainsi le rappeur JP Manova en 2015 dans son titre, « Is everything right ». Avant, Youssoupha rappait aussi en 2012, dans « Gestelude Pt 2 » : <i>« Qu’Obama me délivre, la France c’est pas l’Amérique / Et ça reste un exploit de voir un Noir, même à la mairie »</i>.</p>
+    <div class="lead col-10 text-muted">
+      <p>Après 2005, on constate un désintéressement croissant des rappeurs français pour la politique nationale au profit de sujets internationaux et post-coloniaux. Les artistes français portent un vif intérêt en la personne de Barack Obama, qui se fait connaître dès 2008 dans sa course vers la Maison-Blanche. Ce dernier devient une référence incontournable dans les chansons des artistes de hip-hop français, qui n’hésitent pas à citer son nom comme élément de comparaison pour évoquer divers sujets comme le racisme, la politique internationale et les sujets liés à l’Afrique.</p>
 
 
-<p>Si Barack Obama est le président le plus cité de l’histoire de la musique américaine — avec 309 mentions selon le magazine Billboard — il est également évoqué de nombreuses fois dans le hip-hop français, près de 100 fois d’après les recherches que nous avons effectué, sa popularité auprès des rappeurs — français aussi bien qu’américains — reste à nuancer.</p>
+      <p>En 2009, la chanteuse de hip-hop Diam’s dénonçait ainsi dans son morceau « Dans le noir » le racisme toujours persistant en France, évoquant la personne d’Obama, fraîchement élu : <i>« Vous qui avez besoin de Roselmack et d’Obama / Pour enfin respecter les noirs »</i>. L’artiste Soprano célèbre à sa façon en une ligne l’arrivée de Barack Obama à la Maison-Blanche, dans son morceau « Hiro » sorti en 2010 : <i>« Je serais parti voir Martin Luther King / Après son discours, lui montrer la photo de Barack Obama »</i>. Les mentions sur le président américain pullulent dans les chansons de hip-hop français durant toute la durée de son mandat. Mais s’il est salué de nombreuses fois pour le symbole qu’il a incarné, en France, il est surtout cité comme élément de comparaison avec la vie politique française.</p>
 
-<img src="static/img/obama.png" height="400" width="800" class="img-fluid">
+      <p>Des artistes dénoncent ainsi le manque de respect envers les personnes noires investies dans la vie politique française, bien qu’il existe un président « noir » aux USA : <i>« Loin des Etats-Unis qui votent massivement pour Obama / Je vis la France où l’on agite une Taubira ou Rama »</i>, et plus loin, <i>« Ici, pas de Malcom, de Martin Luther ou d’Mandela / C’est Arnault, Pinault, Lagardère »</i>, chantait ainsi le rappeur JP Manova en 2015 dans son titre, « Is everything right ». Avant, Youssoupha rappait aussi en 2012, dans « Gestelude Pt 2 » : <i>« Qu’Obama me délivre, la France c’est pas l’Amérique / Et ça reste un exploit de voir un Noir, même à la mairie »</i>.</p>
 
-<div><br/><em><font size="2"><font color= "#6c757d">Méthodologie : Nuage de mots des 84 chansons qui citent Barack Obama. Seuls les paragraphes où il est question de l’ex-président américain ont été analysés, pour voir les notions qui lui sont associées.</em></font></font></div>
 
-<br/>
+      <p>Si Barack Obama est le président le plus cité de l’histoire de la musique américaine — avec 309 mentions selon le magazine Billboard — il est également évoqué de nombreuses fois dans le hip-hop français, près de 100 fois d’après les recherches que nous avons effectué, sa popularité auprès des rappeurs — français aussi bien qu’américains — reste à nuancer.</p>
 
-<p>En effet, si beaucoup lui reconnaissent un statut particulier auprès de la communauté afro-américaine, de nombreux artistes dresseront par la suite un portrait moins glorieux de l’ancien président américain. Aux Etats-Unis, dans son morceau « Let Me Know » sorti en 2016, The Game lui a reproché son silence vis-à-vis des violences policières, notamment après la mort de Philando Castile, un afro-américain de 32 ans. <i>« Pourquoi il faut trois jours à Obama pour répondre ? Parce que le Minnesota est à trois jours de la pelouse de la Maison-Blanche »</i>, rappait-il.</p>
+      <img src="static/img/obama.png" height="400" width="800" class="img-fluid">
 
-<p>Du côté français, on constate une détérioration de l’image de Barack Obama auprès des rappeurs à partir de 2012. <i>« J’serai pas Président chez les Blancs, c’est un pantin Obama / Les rappeurs veulent être potos / les dealers veulent des photos »</i>, entonnait Despo Rutti dans son titre « Bukowski » en 2016. Le rappeur s’avère être le critique le plus sévère envers l’ancien président dans ses chansons. <i>« Obama rackette l’Afrique comme Bush et Clinton / C’est notre ennemi, faut surtout pas qu’on te mythonne »</i>, dit-il dans un autre titre Fimbo sorti la même année. A entendre les rappeurs, Obama est devenu pour eux un membre de l’establishment, porte-parole d’une superpuissance capitaliste.</p>
+      <div><br/><em><font size="2"><font color= "#6c757d">Méthodologie : Nuage de mots des 84 chansons qui citent Barack Obama. Seuls les paragraphes où il est question de l’ex-président américain ont été analysés, pour voir les notions qui lui sont associées.</em></font></font></div>
 
-<p>Dans un article du Monde publié en 2012, Brother Ali, rappeur américain indépendant, donne une explication de cette perte de popularité d’Obama : <i>« Il n’a pas été capable de mener à bien les réformes que nous voulions voir accomplies. Cela montre deux choses : soit le système est tellement corrompu que même le meilleur des politiques n’y peut rien, soit Obama a perdu le courage et la force de se battre. En tout cas, il a été incapable de faire bouger les choses. »</i></p>
+      <br/>
 
-</div>
+      <p>En effet, si beaucoup lui reconnaissent un statut particulier auprès de la communauté afro-américaine, de nombreux artistes dresseront par la suite un portrait moins glorieux de l’ancien président américain. Aux Etats-Unis, dans son morceau « Let Me Know » sorti en 2016, The Game lui a reproché son silence vis-à-vis des violences policières, notamment après la mort de Philando Castile, un afro-américain de 32 ans. <i>« Pourquoi il faut trois jours à Obama pour répondre ? Parce que le Minnesota est à trois jours de la pelouse de la Maison-Blanche »</i>, rappait-il.</p>
+
+      <p>Du côté français, on constate une détérioration de l’image de Barack Obama auprès des rappeurs à partir de 2012. <i>« J’serai pas Président chez les Blancs, c’est un pantin Obama / Les rappeurs veulent être potos / les dealers veulent des photos »</i>, entonnait Despo Rutti dans son titre « Bukowski » en 2016. Le rappeur s’avère être le critique le plus sévère envers l’ancien président dans ses chansons. <i>« Obama rackette l’Afrique comme Bush et Clinton / C’est notre ennemi, faut surtout pas qu’on te mythonne »</i>, dit-il dans un autre titre Fimbo sorti la même année. A entendre les rappeurs, Obama est devenu pour eux un membre de l’establishment, porte-parole d’une superpuissance capitaliste.</p>
+
+      <p>Dans un article du Monde publié en 2012, Brother Ali, rappeur américain indépendant, donne une explication de cette perte de popularité d’Obama : <i>« Il n’a pas été capable de mener à bien les réformes que nous voulions voir accomplies. Cela montre deux choses : soit le système est tellement corrompu que même le meilleur des politiques n’y peut rien, soit Obama a perdu le courage et la force de se battre. En tout cas, il a été incapable de faire bouger les choses. »</i></p>
+
+    </div>
+
+  </div>
 
 </section>
 
 
 <section class="container" id="fallref">
 <br/>
-<h4>Le conflit israélo-palestinien</h4><br/>
+<div class="row justify-content-md-center textintro">
+<h4>Le conflit israélo-palestinien<br/><br/></h4>
 
 <div class="lead col-10 text-muted">
 
@@ -196,6 +203,7 @@ Pour Kohndo, <i>« les rappeurs et les quartiers sont tellement liés qu’ils p
 <p>Pour lui, <i>« tout est lié à l’émotion »</i>, <i>« très palpable en France de façon générale »</i>. Les sondages en attestent tout au long de la dernière décennie. Dans la dernière étude publiée en juin 2018, par IFOP, seules 43% des personnes interrogées disent avoir une « bonne image » d’Israël. Signe de l’époque, le rap reflète bien cet état d’esprit ordinaire. Et comme le rappelle Médine, <i>« ça reste une musique, c’est donc forcément en lien avec l’affect »</i>.</p>
 <br>
 
+</div>
 </div>
      
 <div>
